# dehydrator

./: .gitignore  README.md  pyproject.toml
benchmarks/: _tools.py  search_quality.py  token_savings.py  token_savings_openai.py
src/dehydrator/: __init__.py  _adapter.py  _client.py  _index.py  _interceptor.py  _openai_client.py  _search_tool.py  _tokenizer.py  _types.py
tests/: test_client.py  test_index.py  test_interceptor.py  test_mcp_tools.py  test_openai_client.py  test_openai_interceptor.py  test_tokenizer.py
